--- a/transit.yml
+++ b/transit.yml
@@ -6,4 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8.0' 
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt 
+
+    - name: Run Python script
+      run: python actions_to_docker.py
