--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,4 +8,9 @@ jobs:
       - name: Custom action
         id: check
         uses: ./.github/actions/check-pull-requests
-      - run: echo "${{ steps.check.outputs.correctPullRequests }}"
+      - name: Custom action
+        uses: ./.github/actions/actions-to-docker
+        with:
+          correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
+      - run: tail -f /dev/null
+      # - run: echo "${{ steps.check.outputs.correctPullRequests }}"
