--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,5 +7,7 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - name: Custom action
         id: check
-        uses: ./.github/actions/check-pull-requests
+      - uses: ./.github/actions/check-pull-requests
       - run: echo "${{ steps.check.outputs.correctPullRequests }}"
+
+      - uses: ./.github/actions/run-metrics
