--- a/.github/actions/run-metrics/Dockerfile
+++ b/.github/actions/run-metrics/Dockerfile
@@ -1,28 +1,25 @@
 FROM nvidia/cuda:11.0.3-base-ubuntu20.04
+# Install python packages
+COPY requirements.txt requirements.txt
 
 # Необходимые пакеты
-RUN apt-get update && apt-get install -y \
+RUN apt-get update \
+    && apt-get install -y \
     python3.8 \
     python3-pip \
     wget \
-    unzip 
-    
-# Install python packages
-COPY requirements.txt requirements.txt
-# Upgrade pip
-RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install -r requirements.txt
+    unzip \
+    && python3 -m pip install --upgrade pip \
+    && python3 -m pip install -r requirements.txt \
+    && pip install gdown \
+    && pip install --upgrade gdown \
+    &&  apt-get clean && rm -rf /var/lib/apt/lists/* # Очистка кэша apt-get
 
-
-# Install PyTorch
-RUN pip3 install tensorrt==8.6.1
-RUN pip install gdown \
-    & pip install --upgrade gdown
 COPY model_link.txt model_link.txt
-RUN gdown --fuzzy $(cat model_link.txt) -O student_file.txt
-# Очистка кэша apt-get
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN gdown --fuzzy $(cat model_link.txt) -O student_file.pth
 COPY main.py /main.py
 
 #CMD ["python3", "/main.py"]
-CMD cat student_file.txt
+CMD cat student_file.pth
+
+
