add to dockerfile

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,10 +17,14 @@ jobs:
         env:
           PUBLIC_SSH_KEY: "${{ secrets.PUBLIC_SSH_KEY }}"
           PRIVATE_SSH_KEY: "${{ secrets.PRIVATE_SSH_KEY }}"
+      - name: Run Metrics
+        id: result
+        uses: ./.github/actions/run-metrics
+        with:
+          correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
       - uses: actions/checkout@v4.1.1
       - name: Comment pull-requests
         uses: ./.github/actions/comment_writer
         with:
           correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
       - run: tail -f /dev/null
-
