--- a/.github/actions/run-metrics/Dockerfile
+++ b/.github/actions/run-metrics/Dockerfile
@@ -1,25 +1,25 @@
 FROM nvidia/cuda:11.0.3-base-ubuntu20.04
-# Install python packages
-COPY requirements.txt requirements.txt
 
 # Необходимые пакеты
-RUN apt-get update \
-    && apt-get install -y \
+RUN apt-get update && apt-get install -y \
     python3.8 \
     python3-pip \
     wget \
-    unzip \
-    && python3 -m pip install --upgrade pip \
-    && python3 -m pip install -r requirements.txt \
-    && pip install gdown \
-    && pip install --upgrade gdown \
-    &&  apt-get clean && rm -rf /var/lib/apt/lists/* # Очистка кэша apt-get
+    unzip 
+    
+# Install python packages
+COPY requirements.txt requirements.txt
+# Upgrade pip
+RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install -r requirements.txt
 
-COPY model_link.txt model_link.txt
-RUN gdown --fuzzy $(cat model_link.txt) -O student_file.pth
+VOLUME $GITHUB_WORKSPACE/pull-request-data:$GITHUB_WORKSPACE/pull-request-data
+
+# Install PyTorch
+RUN pip3 install tensorrt==8.6.1
+
+# Очистка кэша apt-get
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 COPY main.py /main.py
 
-#CMD ["python3", "/main.py"]
-CMD cat student_file.pth
-
-
+CMD ["python3", "/main.py"]
