--- a/.github/actions/run-metrics/action.yml
+++ b/.github/actions/run-metrics/action.yml
@@ -6,3 +6,6 @@ outputs:
 runs:
   using: "docker"
   image: "Dockerfile"
+env:
+    GH_TOKEN: ${{ github.token }}
+    ACTION_WORKSPACE: .github/actions/run-metrics
