--- a/.github/actions/run-metrics/Dockerfile
+++ b/.github/actions/run-metrics/Dockerfile
@@ -1,6 +1,6 @@
 FROM nvidia/cuda:11.0.3-base-ubuntu20.04
 # Install python packages
-#COPY requirements.txt /requirements.txt
+COPY requirements.txt /requirements.txt
 
 # Необходимые пакеты
 RUN apt-get update \
@@ -8,7 +8,7 @@ RUN apt-get update \
     python3.8 \
     python3-pip \
     && python3 -m pip install --upgrade pip \
-#    && python3 -m pip install -r /requirements.txt \
+    && python3 -m pip install -r /requirements.txt \
     && pip install gdown \
     && pip install --upgrade gdown \
     && apt-get clean && rm -rf /var/lib/apt/lists/* # Очистка кэша apt-get
