Add weights_link.txt check

--- a/.github/actions/run-metrics/Dockerfile
+++ b/.github/actions/run-metrics/Dockerfile
@@ -3,6 +3,7 @@ FROM nvidia/cuda:11.0.3-base-ubuntu20.04
 # Install python packages
 COPY requirements.txt /requirements.txt
 
+COPY entrypoint.sh /entrypoint.sh
 
 # Необходимые пакеты
 RUN apt-get update && apt-get install -y \
@@ -15,7 +16,7 @@ RUN apt-get update && apt-get install -y \
     && pip install --upgrade gdown \
     && apt-get clean && rm -rf /var/lib/apt/lists/* # Очистка кэша apt-get
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["sh", "/entrypoint.sh"]
 
 
 # Очистка кэша apt-get
