--- a/.github/actions/run-lab1/action.yml
+++ b/.github/actions/run-lab1/action.yml
@@ -8,4 +8,4 @@ runs:
   image: "Dockerfile"
   env:
     GH_TOKEN: ${{ github.token }}
-    ACTION_WORKSPACE: .github/actions/run-metrics
+    ACTION_WORKSPACE: .github/actions/run-lab1
