--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,7 +9,7 @@ jobs:
         id: check
         uses: ./.github/actions/check-pull-requests
       - run: mkdir pull-request-data
-      - name: Copy pull-requests files 
+      - name: Copy pull-requests files        
         uses: ./.github/actions/actions-to-docker
         with:
           correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
@@ -19,20 +19,11 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - name: Run Lab
         id: result
-        run: |
-          labTagValue=$(echo "${{ steps.check.outputs.lab-tag }}")
-          echo "$labTagValue"
-          if [ "$labTagValue" == "lab1" ]; then
-            uses: ./.github/actions/run-lab1
-            with:
-              correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
-          elif [ "$labTagValue" == "lab2" ]; then
-            uses: ./.github/actions/run-lab2
-            with:
-              correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
-          else 
-            echo no such work
-          fi
+        uses: |
+          ./.github/actions/run-lab1
+          ./.github/actions/run-lab2
+        with: 
+          correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
       - name: Comment pull-requests
         uses: ./.github/actions/comment_writer
         with:
