--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,10 +16,6 @@ jobs:
         env:
           PUBLIC_SSH_KEY: "${{ secrets.PUBLIC_SSH_KEY }}"
           PRIVATE_SSH_KEY: "${{ secrets.PRIVATE_SSH_KEY }}"
-      #- name: Comment pull-requests
-        #uses: ./.github/actions/comment_writer
-        #with:
-          #correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}" 
       - uses: actions/checkout@v4.1.1
       - name: Run Lab1
         id: lab1
@@ -30,4 +26,8 @@ jobs:
         id: lab2
         uses: ./.github/actions/run-lab2
         with: 
-          correctPullRequests: "${{ steps.check.outputs.correctPullRequests }}"
+          correctPullRequests: "${{ steps.lab1.outputs.correctPullRequests }}"
+      - name: Comment pull-requests
+        uses: ./.github/actions/comment_writer
+        with:
+          correctPullRequests: "${{ steps.lab2.outputs.correctPullRequests }}" 
